RESOLVED FIXED12950
Assertions.cpp should not #define macros that are already defined
https://bugs.webkit.org/show_bug.cgi?id=12950
Summary Assertions.cpp should not #define macros that are already defined
Don Gibson
Reported 2007-03-02 15:40:41 PST
WINVER and _WIN32_WINNT should only be #defined when they don't already exist. Patch coming shortly.
Attachments
patch (931 bytes, patch)
2007-03-02 16:14 PST, Don Gibson
zimmermann: review+
Don Gibson
Comment 1 2007-03-02 16:14:28 PST
Created attachment 13456 [details] patch Pretty simple, really...
Nikolas Zimmermann
Comment 2 2007-03-04 03:46:20 PST
Comment on attachment 13456 [details] patch Please remove the tabs used in JavaScriptCore/ChangeLog. As it's a trivial patch: r=me.
David Kilzer (:ddkilzer)
Comment 3 2007-03-04 17:46:44 PST
Committed revision 19956.
Note You need to log in before you can comment on or make changes to this bug.