JavaScriptCore:

Reviewed by Nikolas Zimmermann.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12950
          Assertions.cpp should not #define macros that are already defined

        * wtf/Assertions.cpp: Don't #define WINVER and _WIN32_WINNT if they
        are already defined.



Canonical link: https://commits.webkit.org/16779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19956 268f45cc-cd09-0410-ab3c-d52691b4dbfc