JavaScriptCore/wtf/Assertions.cpp
@@ -35,8 +35,12 @@
 #endif
 
 #if PLATFORM(WIN)
+#ifndef WINVER
 #define WINVER 0x0500
+#endif
+#ifndef _WIN32_WINNT
 #define _WIN32_WINNT 0x0500
+#endif
 #include <windows.h>
 #include <crtdbg.h>
 #endif
